<resources>
    <string name="app_name">Spending Log</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="overdraft_switch_question">Are you allowed to go overdraft?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_balance_prompt">Enter your current bank balance</string>
    <string name="close">Close</string>
    <string name="create_a_new_entity">Create a new entity</string>
    <string name="name">Name</string>
    <string name="enter_the_new_entities_name">Enter new entities\' name</string>
    <string name="starting_balance">Starting balance</string>
    <string name="enter_starting_balance_for_new_entity_def_inf">Start $ for entity (def. +inf.)</string>
    <string name="allowed_overdraft">Allowed overdraft?</string>
    <string name="view_all">View all</string>
    <string name="create_a_new_transaction">Create a new transaction</string>
    <string name="sender">Sender</string>
    <string name="receiver">Receiver</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="reoccurring">Re-occurring?</string>
    <string name="occurring">Occurring</string>
    <string name="clear">clear</string>
    <string name="enter_transaction_amount">Enter transaction amount</string>
    <string name="selected">Selected</string>
    <string name="total">Total</string>
    <string name="delete">Delete</string>
    <string name="clear_selected">Clear Selected</string>
    <string name="select_all">Select All</string>
    <string name="custom_occurring_prompt"><![CDATA[(0 < x <= + inf.)]]></string>
    <string name="times_per">times per</string>
    <string name="enter_a_number">Enter a number:</string>
    <string name="reason_for_transaction">Reason for Transaction</string>
    <string name="back_arrow">back arrow</string>
    <string name="add_filters">add filters</string>
    <string name="in_depth_view">In depth view</string>
    <string name="select_a_filter_to_add">Select a filter to add.</string>
    <string name="by_start_date">By Start Date:</string>
    <string name="by_recipient">By Recipient:</string>
    <string name="by_sender">By Sender:</string>
    <string name="by_entity">By Entity:</string>
    <string name="by_end_date">By End Date:</string>
    <string name="by_amount_range">By Amount Range:</string>
</resources>
